gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test22999.d
version https://git-lfs.github.com/spec/v1
oid sha256:9cafc6e1489df0d1a988df8c7fd7eb262dacbc0890f362c5b602c50ce6976bd8
size 566
